Fix: Allow numbered headings in TOC - Updated `TableOfContents.tsx` to handle numbered headings in the TOC,   wrapping them in a span that ensures lining-num style for the whole   number. - Adjusted padding in `custom.scss` to be smaller in the TOC.

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -348,7 +348,8 @@ h6,
 #toc-content li {
   // Oldstyle is too small for headers
   &::first-letter,
-  & span {
+  & span,
+  .number-prefix {
     font-variant-numeric: lining-nums;
   }
   // color: var(--color-header);
